<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopgun</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="skip">Skip</string>
    <string name="drawer_open">Open options panel</string>
    <string name="drawer_close">Close options panes</string>
    <string name="action_scan">Scanna streckkod</string>
    <string name="action_search">Fritextsökning</string>
    <string name="ethics">Etik</string>
    <string name="health">Hälsa</string>
    <string name="environment">Miljö</string>
    <string name="did_you_know">Visste du att...</string>
    <string name="product_description_header">Om produkten</string>
    <string name="title_overview">Överblick</string>
    <string name="title_advice_list">Köpråd</string>
    <string name="title_product_info">Mer om produkten</string>
    <string name="title_product_facts">Produktfakta</string>
    <string name="title_product_list_certified_alternatives">Certifierade alternativ</string>
    <string name="title_activity_product_view">Product</string>
    <string name="hello_world">Hello world!</string>
    <string name="product_video_header">Video från producenten</string>
    <string name="title_activity_advice">Köpråd</string>
    <string name="advisor">Rådgivare</string>
    <string name="about">Om</string>
    <string name="title_activity_advisor">Rådgivare</string>
    <string name="advisors_homepage">Besök rådgivarens hemsida</string>
    <string name="title_activity_product">Produkt</string>
    <string name="title_activity_ingredient">Ingrediens</string>
    <string name="title_ingredient_info">Wikipedia</string>
    <string name="title_activity_company">Företag</string>
    <string name="title_company_info">Mer om företaget</string>
    <string name="title_company_csr">Fem snabba CSR</string>
    <string name="title_company_facts">Företagsfakta</string>
    <string name="title_company_brands">Företagets varumärken</string>
    <string name="title_activity_brand">Varumärke</string>
    <string name="title_brand_info">Mer om varumärket</string>
    <string name="title_brand_facts">Varumärkesfakta</string>
    <string name="brand_products">Varumärkets produkter</string>
    <string name="manualInputGhost">Sök</string>
    <string name="action_advisors">Rådgivare</string>
    <string name="more_about_producer">Läs mer om producenten</string>
    <string name="product_ingredients_header">Ingredienser</string>
    <string name="product_nutrition_header">Näringsvärde</string>
    <string name="product_producer_header">Producent</string>
    <string name="product_brand_header">Varumärke</string>
    <string name="company_description_header">Om företaget</string>
    <string name="company_address_header">Kontakt</string>
    <!--<string name="more_about_product">\u003Ca href=\'%1$s\'\u003EBesök produktens hemsida\u003C\u002Fa\u003E</string>-->
    <string name="more_about_product">Besök produktens hemsida</string>
    <string name="table_of_content_missing">Ingrediensinformation saknas</string>
    <string name="nav_drawer_about">Om Shopgun</string>
    <string name="nav_drawer_vision">Vision</string>
    <string name="nav_drawer_faq">FAQ</string>
    <string name="nav_drawer_partners">Partners</string>
    <string name="nav_drawer_mentors">Rådgivare</string>
    <string name="nav_drawer_companies">Företag</string>
    <string name="nav_drawer_sponsors">Sponsorer</string>
    <string name="advisor_description_missing">Rådgivarebeskrivning saknas.</string>
    <string name="company_description_missing">Företagsbeskrivning saknas.</string>
    <string name="company_homepage">Läs mer på företagets hemsida</string>
    <string name="company_video_header">Videopresentation</string>
    <string name="product_description_missing">Produktbeskrivning saknas.</string>
    <string name="title_activity_certification_mark">Certifiering</string>
    <string name="certificationMark_description_missing">Beskrivning av certifieringsmärkningen saknas.</string>
    <string name="nav_drawer_certificationmark">Märkningsguide</string>
    <string name="title_activity_batch_scan">Skanna produkter</string>
    <string name="title_activity_product_comparison">Jämför produkter</string>
    <string name="done">Färdig!</string>
    <string name="compare_products">Jämför produkterna</string>
    <string name="action_batch_scan">Skanna flera produkter</string>
    <string name="show_certified_alternatives">Produkten saknar certifieringar\nVisa certifierade alternativ</string>
    <string name="circle_diagram_header">VIKTADE KÖPRÅD</string>
    <string name="top_advices_header">TOPPRANKADE KÖPRÅD</string>
    <string name="table_of_content">Innehållsförteckning</string>
    <string name="show_advices">Visa alla köpråd</string>
    <string name="show_product_facts">Visa produktens faktasida</string>
    <string name="no_advices">Vi har ännu inga köpråd att visa.</string>
    <string name="no_colored_advices">Det finns inga färgade köpråd</string>
    <string name="company_no_member">Företaget har ännu inte tillfört utökad företagsinformation. Här hittar du annars:</string>
    <string name="brand_no_member">Företaget har ännu inte tillfört utökad information om detta varumärke. Här hittar du annars:</string>
    <string name="product_no_member">Företaget har ännu inte tillfört utökad information om denna produkt. Här hittar du annars:</string>
    <string name="product_no_member_extended">&#8226; Videopresentationer\n&#8226; Direktlänkar till hemsidor\n&#8226; CSR-fakta med mera...</string>
    <string name="advice_about">Köprådet gäller</string>
    <string name="product_info_missing">Produktinfo saknas!</string>
    <string name="brand_homepage">Läs mer på varumärkets hemsida</string>
    <string name="more_about">MER INFORMATION</string>
    <string name="certificationMark_header">Certifieringar:</string>
    <string name="product">Produkt</string>
    <string name="gtin_header">GTIN:</string>
    <string name="advisor_list">Våra rådgivare</string>
    <string name="about_product">Om produkten</string>
    <string name="about_the_company">Om företaget</string>
    <string name="csr_description">Det här gör vi bra och är stolta över:</string>
    <string name="csr_header">Företagets CSR arbete</string>
    <string name="csr_no_member">Företaget har ännu inte tillfört CSR information.</string>
    <string name="owned_by">Ägs av</string>
    <string name="contact">Kontakt</string>
    <string name="about_the_brand">Om varumärket</string>
    <string name="brand_video_header">Videopresentation</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="more_facts">Mera fakta</string>
    <string name="allabolag_info">Läs mer om företaget på\nallabolag.se</string>
    <string name="origin_header">Ursprung:</string>
    <string name="productInfoMissing">Företaget %s delar ännu inte all sin produktfakta med Shopgun. Vill du veta mer om produkten så tipsa dem gärna om möjligheten!</string>
    <string name="productNotFoundInfo">Leverantören delar ännu inte sin produktfakta med Shopgun. Vi jobbar kontinuerligt för att få in fler produkter i vår databas.</string>
    <string name="productNotFound">Produkten hittades ej!</string>
    <string name="only_white_advices">Det finns inga färgsatta köpråd. Däremot så finns det vita köpråd att läsa :)</string>
    <string name="ingredient_info_missing">Ingrediensinformation saknas/är inte tillämpligt på denna produkt.</string>
    <string name="product_ingredients_header_colon">Ingredienser:</string>
    <string name="product_origin_header">Ursprungsland</string>
    <string name="product_certification_header">Certifieringar</string>
    <string name="product_info_disclaimer">Utökad produktinformation tillförd av producenten.</string>
    <string name="owner_header">Ägare</string>
    <string name="brand_info_disclaimer">Utökad varumärkesinformation tillförd av ägaren.</string>
    <string name="brand_member_info">Läs mer om varumärket</string>
    <string name="company_member_info">Läs mer om företaget</string>
    <string name="company_info_disclaimer">Utökad information tillförd av företaget.</string>
    <string name="scan_multiple">Scanna flera produkter</string>
    <string name="product_lacks_certifications">Produkten saknar certifieringar</string>
    <string name="certificationmark_homepage">Läs mer på hemsidan</string>
    <string name="sign_in_google">Logga in med Google</string>
    <string name="adviceRatingQuestion">Jag anser att informationen i detta köpråd är</string>
    <string name="dashboardText">Börja med att skanna en eller flera produkter</string>
    <string name="dashboardFreeSearchText">Eller gör en fritextsökning</string>
    <string name="nav_drawer_feedback"><![CDATA[Feedback & Frågor]]></string>
</resources>
