<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <LinearLayout
                style="@style/BackgroundPlate.NoBottomLine">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/productImage"/>
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:text="@string/product_no_member"
                android:textSize="16sp"
                style="@style/BackgroundPlate"/>

            <LinearLayout
                android:id="@+id/productProducerNoMemberInfo"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                style="@style/BackgroundPlate"
                android:paddingBottom="16dp">

                <TextView
                    android:text="@string/product_no_member"
                    style="@style/InfoText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/shopgun_green_darker"
                    android:text="@string/product_no_member_extended"/>

            </LinearLayout>

            <TextView
                android:id="@+id/productHomepageButton"
                android:text="@string/more_about_product"
                style="@style/BackgroundPlate.Clickable.Info"/>

            <LinearLayout
                android:id="@+id/productVideoContainer"
                style="@style/BackgroundPlate"
                android:orientation="vertical">


                <WebView
                    android:id="@+id/productVideo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/productInfoDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="10sp"
            android:text="@string/product_info_disclaimer"
            />
        
        <LinearLayout
            style="@style/bottomSpacing"/>

    </LinearLayout>

</ScrollView>