<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/overview_header" />

        <FrameLayout
            android:id="@+id/topWeightedAdvicesFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/moreInformationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/BackgroundPlate">

            <TextView
                android:text="@string/more_about"
                style="@style/header" />

            <TextView
                android:id="@+id/ifBrandMemberInfo"
                android:onClick="onBrandInfoButtonPressed"
                android:text="@string/brand_member_info"
                android:drawableLeft="@drawable/ic_brand"
                style="@style/TextButton.LighterBlue" />

            <View style="@style/horizontalDelimiter" />

            <LinearLayout
                android:id="@+id/ownerButton"
                android:onClick="onStartCompanyActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/selector_button">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/ic_company" />

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Company"
                    android:textSize="18sp"
                    android:textColor="@color/shopgun_blue_darker" />

                <ImageView
                    android:id="@+id/companyLogotype"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_arrow_right" />

            </LinearLayout>

            <View style="@style/horizontalDelimiter" />

            <TextView
                android:onClick="onShowProducts"
                android:text="@string/brand_products"
                android:drawableLeft="@drawable/ic_product"
                style="@style/TextButton.DarkerBlue" />

            <View style="@style/horizontalDelimiter" />

        </LinearLayout>

        <View style="@style/bottomSpacing"/>

    </LinearLayout>
</ScrollView>