<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/companyName"
            style="@style/BackgroundPlate.Logotype"/>

        <ImageView
            android:id="@+id/companyLogotype"
            style="@style/BackgroundPlate.Logotype"/>

        <LinearLayout
            android:orientation="vertical"
            style="@style/BackgroundPlate">

            <TextView
                android:text="@string/contact"
                style="@style/header"/>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/addressHeader"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"

                    android:src="@drawable/ic_address"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/companyAddress"
                    android:padding="8dp"
                    android:textSize="16dp"
                    android:layout_toRightOf="@id/addressHeader"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/phoneHeader"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_phone"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/companyPhone"
                    android:layout_toRightOf="@id/phoneHeader"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:textSize="16dp"
                    android:autoLink="phone"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/emailHeader"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_mail"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/companyEmail"
                    android:autoLink="email"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:textSize="16dp"
                    android:layout_toRightOf="@id/emailHeader"
                    />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        style="@style/BackgroundPlate">

        <TextView
            android:text="@string/more_facts"
            style="@style/header"/>

        <TextView
            android:id="@+id/allabolagButton"
            android:text="@string/allabolag_info"
            android:drawableLeft="@drawable/ic_allabolag"
            style="@style/TextButton.DarkerBlue"/>

    </LinearLayout>

        <LinearLayout
            style="@style/bottomSpacing"/>

    </LinearLayout>

</ScrollView>