<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ProductOverviewFragment">

        <RelativeLayout
            android:onClick="onShowCertifiedAlternatives"
            android:id="@+id/certifiedAlternativesButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_lacks_certification">

            <ImageView
                android:id="@+id/angleBracketCertifiedAlternatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_arrow_right"
                />

            <TextView
                android:text="@string/show_certified_alternatives"
                android:layout_toLeftOf="@id/angleBracketCertifiedAlternatives"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>

            <ImageView
                android:src="@drawable/delimiter"
                style="@style/listItemDelimiter"
                android:layout_alignParentTop="true"/>

        </RelativeLayout>

        <include
            android:id="@+id/productMainInfoItem"
            layout="@layout/product_main_info_item"/>

        <TextView
            android:id="@+id/productInfoButton"
            android:onClick="onShowProductInfo"
            style="@style/BackgroundPlate.Clickable.Info"
            android:text="@string/title_product_info"/>

        <FrameLayout
            android:id="@+id/topWeightedAdvicesFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/moreInformationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/BackgroundPlate">

            <TextView
                android:text="@string/more_about"
                style="@style/header"/>

            <LinearLayout
                android:id="@+id/brandButton"
                android:onClick="onStartBrandActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/selector_button">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/ic_brand"/>

                <TextView
                    android:id="@+id/brandName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Brand"
                    android:textSize="18sp"
                    android:textColor="@color/shopgun_blue_lighter"/>

                <ImageView
                    android:id="@+id/brandLogotype"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:padding="16dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_arrow_right"/>

            </LinearLayout>

            <View
                style="@style/horizontalDelimiter"/>

            <LinearLayout
                android:id="@+id/producerButton"
                android:onClick="onStartCompanyActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/selector_button">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="8dp"
                    android:src="@drawable/ic_company"/>

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Company"
                    android:textSize="18sp"
                    android:textColor="@color/shopgun_blue_darker"/>

                <ImageView
                    android:id="@+id/companyLogotype"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:padding="16dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_arrow_right"/>

            </LinearLayout>

            <View
                style="@style/horizontalDelimiter"/>

        </LinearLayout>

        <View style="@style/bottomSpacing"/>

    </LinearLayout>
</ScrollView>